--- a/css/style.css
+++ b/css/style.css
@@ -1194,6 +1194,7 @@ ul .drill-group {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	padding-left: 15px;
 	padding-bottom: 17px;
 	width: 540px;
 	display: flex;
