--- a/css/style.css
+++ b/css/style.css
@@ -104,12 +104,12 @@ input[type="search"]::placeholder { color: #ffffff; }
     opacity: 0.3;
 }
 
-.search-form input:focus ~ .search-form-btn {
+.search-form input:focus + .search-form-btn {
 	background-image: url("../img/icon-search-red.svg");
 	opacity: 1;
 }
 
-.search-form label:hover ~ .search-form-btn {
+.search-form input:hover + .search-form-btn {
 	opacity: 1;
 }
 
